alignment fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   font-family: 'Nunito', sans-serif;
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 /* For Webkit-based browsers (Chrome, Safari) */
